[workspace]
members = [ "axum-webservice", "rust-job", "rust-jwt", 
    "rust-sqlite",
    "valkey-stream",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
chrono = "0.4.42"
derive_more = { version = "2.0.1", features = ["display", "from"] }
httpc-test = "0.1.10"
jsonwebtoken = "9.3.1"
pretty-sqlite = "0.3.0"
redis = { version = "0.32.7", features = ["tokio-comp"] }
rusqlite = { version = "0.37.0", features = ["bundled", "serde_json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tower-http = { version = "0.6.6", features = ["fs"] }
tokio = { version = "1.47.1", features = ["full"] }

[workspace.lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
