[workspace]
members = ["actionkv", "axum-webservice", "bit-patterns", "chip8-emu", "file-sim", "grep-lite", "mandelbrot", "mget", "pipeviewer", "progress-iter", "retro-chat", "rust-in-action", "rust-job", "rust-jwt",
    "rust-sqlite",
    "valkey-stream",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
bincode = "1.3.3"
byteorder = "1.5.0"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive", "env"] }
crc = "3.3.0"
crossbeam = "0.8.4"
crossterm = "0.29.0"
cursive = "0.21.1"
derive_more = { version = "2.0.1", features = ["display", "from"] }
httpc-test = "0.1.10"
jsonwebtoken = "9.3.1"
num = "0.4.3"
pretty-sqlite = "0.3.0"
rand = "0.9.2"
redis = { version = "0.32.7", features = ["tokio-comp"] }
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["bundled", "serde_json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smoltcp = { version = "0.6.0" }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
trust-dns = "0.16.0"
url = "2.5.7"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
