[package]
name = "rust-in-action"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
rand = "0.9.2"

# [lints]
# workspace = true

# For exploratory dev.
[lints.rust]
unsafe_code = "allow" 
unused = { level = "allow", priority = -1 }

# [lints.clippy]
# unwrap_used = "warn"
# expect_used = "warn"
