[package]
name = "rust-jwt"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true }

[lints]
workspace = true
