[package]
name = "rust-sqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
# -- Async
tokio = { workspace = true, features = ["full"] }
# -- DB
rusqlite = { workspace = true, features = ["bundled", "serde_json"] }
# -- Json
serde = { workspace = true, features = ["derive"] }
serde_json =  { workspace = true }

[dev-dependencies]
pretty-sqlite = { workspace = true }

[lints]
workspace = true
